--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>CV</title>
-    <link rel="icon" href="assets/img/fav.ico">
+    <link rel="icon" href="assets1/img/fav.ico">
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -24,7 +24,7 @@
   <main class="main">
     <div class="container">
     <section class="photo">
-    <p><image src="D:/MyCV/assets/img/image.jpg" alt="" width="250"></p>
+    <p><image src="D:/MyCV/assets1/img/image.jpg" alt="" width="250"></p>
     </section>
     <section class="position">
     <p><h1>Korolchuk Nika</h1></p>
