--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main class="main">
     <div class="container">
     <section class="photo">
-    <p><image src="assets1/img/image.jpg" alt="" width="250"></p>
+    <p><image src="D:/myCV/assets1/img/image.jpg" alt="" width="250"></p>
     </section>
     <section class="position">
     <p><h1>Korolchuk Nika</h1></p>
