--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>CV</title>
     <link rel="icon" href="assets1/img1/fav.ico">
@@ -46,7 +46,7 @@
           Github: <a href="https://github.com/korolchuknika" title="github">korolchuknika</a>
         </li>
         <li class="section-item contacts-item">
-          Discord: <a href="https://Nika (korolchuknika)#3964" title="github">korolchuknika</a>
+          Discord: <a href="https://discord.gg/CEmuJG5Y" title="Discord">korolchuknika</a>
         </li>
       </ul>
     </section>
