--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <li class="section-item contacts-item">
           Discord:<a href="https://discord.gg/CEmuJG5Y" title="Discord">korolchuknika</a>
         </li>
+        <li class="section-item contacts-item">
+          Codewars:<a href="https://www.codewars.com/users/rsschool_korolchuknika" title="Codewars">rsschool_korolchuknika</a>
+        </li>
       </ul>
     </section>
 
