--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="section" id="summary">
       <h2 class="section-title">Summary</h2>
       <p>
-        I am a highly motivated person who wants to develop in the field of Salesforse Developer. I like programming. My main qualities like: attention to details, negotiating skills, reliability make me a good team player.
+        I am a highly motivated person who wants to develop in the field of Front-end development. I like programming. My main qualities like: attention to details, negotiating skills, reliability make me a good team player.
       </p>
     </section>
     <section class="section" id="skills">
